public/frontEnd/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700;800;900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

html, body {
    max-width: 100%;
    overflow-x: hidden;
}

body {
    font-family: "Roboto", sans-serif;
    font-size: 14px;
    line-height: 1.5;
    background: #ececec;
}

/*==== COMMON CSS START ====*/
@font-face {
    font-family: "Potro Sans Bangla";
    src: url("../fonts/Potro-Sans-Bangla-Regular.ttf");
    src: url("../fonts/Potro-Sans-Bangla-Regular.ttf?#iefix") format("embedded-opentype"), url("../fonts/Potro-Sans-Bangla-Regular.ttf") format("truetype");
}

@font-face {
    font-family: "Alinur Banglaborno";
    src: url("../fonts/Li-Alinur-Banglaborno-Unicode.ttf");
    src: url("../fonts/Li-Alinur-Banglaborno-Unicode.ttf?#iefix") format("embedded-opentype"), url("../fonts/Li-Alinur-Banglaborno-Unicode.ttf") format("truetype");
}

p {
    text-align: left;
    margin: 0;
    color: #000;
    padding: 0;
}

.alinur {
    font-family: "Alinur Banglaborno", sans-serif;
}

button,
button:focus,
button:active {
    outline: none !important;
    box-shadow: 0 0 !important;
}

form input::placeholder {
    font-size: 15px;
    color: #888;
    text-align: left !important;
    float: left !important;
}

ul,
ol {
    margin: 0;
    padding: 0;
}

li {
    display: inline-block;
    list-style: none;
}

a,
a:hover,
a,
a:hover,
a:focus {
    color: #000;
    text-decoration: none;
    outline-offset: 0;
    outline: 0;
}

button,
button:focus,
button:active {
    text-decoration: none;
    border: 0;
    outline: 0;
}

.form-control,
.form-control:focus,
input,
input:focus {
    outline: 0;
    border: 0;
    box-shadow: 0 0 !important;
}

.parsley-errors-list {
    color: #3c7d17;
}

.parsley-error {
    border: 1px solid #3c7d17 !important;
}

img {
    max-width: 100%;
    height: 100%;
}

button {
    padding: 0;
    border: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: "Poppins", sans-serif;
    margin: 0;
}

.potro_font {
    font-family: Potro Sans Bangla;
}

svg {
    height: 16px;
    width: 16px;
}

.cursor {
    cursor: pointer;
}

.float-left {
    float: left;
}

.float-right {
    float: right;
}

.container_97 {
    max-width: 1200px;
}

.container {
    max-width: 1380px;
}

footer {
    padding: 0 0;
}

.footer-widgets {
    background-color: #87a3bf;
    border-top: 1px solid rgba(0, 0, 0, 0.05);
    padding-top: 30px;
}

.footer-copyright {
    background-color: rgba(22, 112, 191, 0.98);
    padding: 15px 0 15px;
}

.footer-copy-text {
    color: hsla(0, 0%, 100%, 0.5);
}

.container_top {
    width: 975px;
    margin: 0 auto;
}

/*==== COMMON CSS END ====  */

/*==== HEADER CSS START ====  */
header {
    position: fixed;
    box-shadow: 0px 0px 10px #ddd;
    top: 0;
    width: 100%;
    z-index: 9999;
}

.header-top {
    background: rgba(0, 119, 204, 0.97);
    display: flex;
    height: 50px;
    align-items: center;
}

.header-left span {
    margin-right: 15px;
    color: #fff;
    text-transform: uppercase;
    font-size: 13px;
    font-weight: 500;
}

.header-left span a {
    color: #fff;
}

.header-left ul li a {
    margin: 0 5px;
}

.header-left ul {
    display: inline-block;
}

.header-right {
    text-align: right;
}

.header-right span ul {
    display: flex;
    justify-content: flex-end;
    column-gap: 4px;
}

.header-right a {
    color: #ffffffcc;
    border: 2px solid;
    font-size: 16px;
    border-radius: 5px;
    transition: 0.3s all;
    border-color: hsla(0, 0%, 100%, 0.5);
    height: 30px;
    width: 32px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.header-right a:hover {
    background: blue;
    border: 1px solid blue;
}

.Newsletter a {
    border: none;
    width: auto;
    margin-right: 8px;
}

.Newsletter a:hover {
    background: none;
    border: none;
}

li.Newsletter i {
    margin-right: 2px !important;
    font-size: 10px;
}

.header-left {
    font-size: 15px;
    height: 100%;
    display: flex;
    align-items: center;
}

.logo-area {
    padding: 8px 0;
}

.sticky.is-sticky {
    background: #222;
    z-index: 9999;
    border-bottom: 1px solid #ddd;
}

.logo-header {
    display: grid;
    grid-template-columns: 30% 40% 30%;
    grid-gap: 0;
}

/*search*/
.main-search {
    margin: 8px 8px 8px 16px;
    position: relative;
}
.search_result {
    position: relative;
}
.search_product {
    position: absolute;
    width: 100%;
    background: #fff;
    z-index: 999999;
    border: 1px solid #ddd;
    top: 0;
}

.search_product img {
    width: 50px;
    height: 50px;
    margin-top: 6px;
    border-radius: 50px;
}

.search_product li {
    width: 100%;
    display: grid;
    grid-template-columns: 65px auto;
    grid-gap: 15px;
    padding: 8px 15px;
    border-bottom: 1px solid #ddd;
    transition: 0.35s all;
}

.search_product ul li:hover {
    background: #f1f1f1;
}

.search_content .price {
    color: #b74135;
    font-weight: 600;
}

.mobile-show {
    display: none !important;
}

.mobile-header {
    display: none;
}

.mobile-categories ul li {
    display: block;
    z-index: 99999;
    width: 100%;
    height: auto;
}

.mobile-categories {
    position: fixed;
    z-index: 99999;
    background: #fff;
    top: 0;
    width: 85%;
    transition: 0.35s all;
    left: -100px;
    visibility: hidden;
    opacity: 0;
    height: 100%;
}

.mobile-categories.active {
    left: 0;
    visibility: visible;
    opacity: 1;
}

.mobile-search input {
    width: 86% !important;
    text-align: center;
}

.mobile-search button {
    width: 13% !important;
}
/* ... */

